fixed with college card on mobile and tablet view

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -17,4 +17,12 @@
   #about .details .typing p {
     font-size: 1.1rem !important;
   }
+  #about .education-card {
+    min-height: 500px;
+    margin: 1rem;
+  }
+  #about .education-card .education-card-image {
+    height: 200px;
+    width: 100%;
+  }
 }
