--- a/css/tablet.css
+++ b/css/tablet.css
@@ -55,4 +55,11 @@
   #about .social a:after {
     padding-top: 55px;
   }
+  #about .education-card-group {
+    grid-template-columns: 1fr;
+    grid-row-gap: 1rem;
+  }
+  #about .education-card {
+    min-height: 500px;
+  }
 }
